# rules_cc_hdrs_map

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  CHANGELOG.md  MODULE.bazel  README.md  TODOs.md  WORKSPACE.bazel  WORKSPACE.bzlmod  cog.toml  default.nix  flake.nix  pre-commit.hook.sh  shell.nix
.bazelrcs/: common.bazelrc  rbe.bazelrc  remote-execution.bazelrc
.bcr/: metadata.template.json  source.template.json
.github/workflows/: ci.yaml  publish.yaml  release.yaml  release_prep.sh
cc/: BUILD.bazel  bin.bzl  cc_hdrs.bzl  common.bzl  conf.bzl  hdrs_map.bzl  header_maps.bzl  so.bzl  static.bzl
cc_hdrs_map/: BUILD.bazel  defs.bzl  workspace_deps.bzl
cc_hdrs_map/actions/: BUILD.bazel  cc_helper.bzl  compile.bzl  copy_file.bzl  defs.bzl  link_to_archive.bzl  link_to_binary.bzl  link_to_so.bzl
cc_hdrs_map/private/: BUILD.bazel  attrs.bzl  cc_archive.bzl  cc_bin.bzl  cc_hdrs.bzl  cc_so.bzl  cc_so_import.bzl  common.bzl
cc_hdrs_map/providers/: BUILD.bazel  cascading_cc_shared_library_info.bzl  cc_shared_library_info.bzl  hdrs_map.bzl  hdrs_map_info.bzl  helper.bzl
docs/: BUILD.bazel  README.md  cc_archive_docs.md  cc_bin_docs.md  cc_hdrs_docs.md  cc_so_docs.md  cc_static_docs.md
examples/: .bazelignore  .bazelrc  .bazelrcs  0001-feat-explicit-load-of-rules_cc-s-symbols.patch  BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  WORKSPACE.bzlmod
examples/a/private/implements/: BUILD.bazel  list-cheeses.cpp  print-half-a-bee.cpp
examples/a/private/includes/: BUILD.bazel  a-consts-one.hpp  half-a-bee.hpp
examples/a/private/includes/pointless-subdir/: a-consts-three.hpp  a-consts-two.hpp
examples/a/private/other/: BUILD.bazel  a-consts-four.hpp
examples/a/public/implements/: BUILD.bazel  cheeses.cpp  list.cpp
examples/a/public/includes/: BUILD.bazel  cheeses.hpp
examples/b/private/implements/: BUILD.bazel  ping.cpp
examples/b/private/includes/: BUILD.bazel  ping.hpp
examples/b/public/implements/: BUILD.bazel  pingpong.cpp  pong.cpp
examples/b/public/includes/: BUILD.bazel  pong.hpp
examples/libs/: BUILD.bazel
examples/libuuid/: BUILD.bazel
examples/libuuid/lib/: libuuid.so.1.3.0
examples/patches/: 000-modularize-rules-boost.patch
examples/simple/: BUILD.bazel  main.cpp  messenger.cpp  riddle-one.hpp  riddle-three.hpp  vanilla-boost.cpp
examples/simple/cc_so_import/: BUILD.bazel  main.c  use_uuid.c  use_uuid.h
examples/simple/deck/: BUILD.bazel  deck.cpp  deck.hpp
examples/simple/main/: BUILD.bazel  main.cpp  main.hpp
examples/simple/messenger/: BUILD.bazel  messenger.cpp  messenger.hpp
examples/simple/random/: BUILD.bazel  random.cpp  random.hpp
examples/tolkien/: BUILD.bazel
examples/tolkien/reuel/ronald/john/include/: riddle-four.hpp  riddle-two.hpp
nix/: sources.json
patches/: 000-modularize-stardoc.patch
patches/github.com-bazelbuild-rules_cc/: 0001-patch-cc_shared_library_info_bzl-made-public.patch  BUILD.bazel
patches/github.com-f0rmiga-gcc-toolchain/: 0001-feat-explicit-load-of-rules_cc-s-symbols.patch  0001-fix-toolchain-allow-empty-include-globs.patch  BUILD.bazel
rules/: BUILD.bazel  cc_archive.bzl  cc_bin.bzl  cc_bin_hdrs_map.bzl  cc_hdrs.bzl  cc_so.bzl  cc_static.bzl
rules/lib/: common.bzl  conf.bzl  copy_file.bzl  hdrs_map.bzl  rules_attrs.bzl
scripts/: gen-release-artifacts.bash
utils/: BUILD.bazel  stardocs.bzl
