module(
    name = "rules_cc_hdrs_map",
    version = "0.0.1",
)

# This project does not rely on any dependencies to function properly.
# Entries below are solely for the purposes of development.
bazel_dep(
    name = "bazel_skylib",
    dev_dependency = True,
    version = "1.2.1",
)
bazel_dep(
    name = "stardoc",
    dev_dependency = True,
    version = "0.5.2",
)

archive_override(
    integrity = "sha256-BftXu0rWijYEcEIKO29TF+T3IoOavFsX7E747UZaqkc=",
    module_name = "stardoc",
    patches = [
        "//:patches/000-modularize-stardoc.patch",
    ],
    urls = ["https://github.com/bazelbuild/stardoc/releases/download/0.5.2/stardoc-0.5.2.tar.gz"],
)

stardoc_ext = use_extension("@stardoc//:setup.bzl", "stardoc_ext")

use_repo(stardoc_ext, "rules_java")
