module(
    name = "rules_cc_hdrs_map",
    version = "0.0.3",
)

# This project does not rely on any dependencies to function properly.
# Entries below are solely for the purposes of development.
bazel_dep(
    name = "bazel_skylib",
    dev_dependency = True,
    version = "1.3.0",
)
bazel_dep(
    name = "stardoc",
    dev_dependency = True,
    version = "0.5.3",
)

