workspace(
    name = "rules_cc_hdrs_map",
)

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# This project does not rely on any dependencies to function properly.
# Entries below are solely for the purposes of development.
http_archive(
    name = "bazel_skylib",
    sha256 = "1c531376ac7e5a180e0237938a2536de0c54d93f5c278634818e0efc952dd56c",
    urls = [
        "https://github.com/bazelbuild/bazel-skylib/releases/download/1.0.3/bazel-skylib-1.0.3.tar.gz",
        "https://mirror.bazel.build/github.com/bazelbuild/bazel-skylib/releases/download/1.0.3/bazel-skylib-1.0.3.tar.gz",
    ],
)

load("@bazel_skylib//:workspace.bzl", "bazel_skylib_workspace")

bazel_skylib_workspace()

# Author's soap box:
# I need to keep this named 'stardoc' as it should match the dep download namming from bzlmod
# https://github.com/bazelbuild/bazel-central-registry/pull/25/files
# Not a fan.
http_archive(
    name = "stardoc",
    sha256 = "aa814dae0ac400bbab2e8881f9915c6f47c49664bf087c409a15f90438d2c23e",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/stardoc/releases/download/0.5.1/stardoc-0.5.1.tar.gz",
        "https://github.com/bazelbuild/stardoc/releases/download/0.5.1/stardoc-0.5.1.tar.gz",
    ],
)

load("@stardoc//:setup.bzl", "stardoc_repositories")

stardoc_repositories()
