module(
    name = "rules_cc_hdrs_map_examples",
    version = "0.9.2",
)

bazel_dep(name = "rules_cc_hdrs_map", version = "0.9.2")
bazel_dep(name = "rules_cc", version = "0.1.3")
bazel_dep(name = "platforms", version = "1.0.0")

# The gcc_toolchain requires skylib
bazel_dep(name = "bazel_skylib", version = "1.8.1")

# Some examples depend on boost, to prove interopability
bazel_dep(name = "boost.math", version = "1.87.0")

register_execution_platforms("@rules_cc_hdrs_map_examples//:x86_64_linux_remote")

local_path_override(
    module_name = "rules_cc_hdrs_map",
    path = "../",
)
