module(
    name = "rules_cc_hdrs_map_examples",
    version = "0.29.1",
)

bazel_dep(name = "rules_cc_hdrs_map", version = "0.29.1")
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "platforms", version = "1.0.0")

# Some examples depend on boost, to prove interopability
bazel_dep(name = "boost.math", version = "1.87.0")
bazel_dep(
    name = "gcc_toolchain",
    version = "0.9.0",
)

# This dependency is here
# to ensure we are using the aspect_bazel_lib
# that is compatbile with Bazel 9
# (it is gcc_toolchain dependency in older version)
bazel_dep(
    name = "aspect_bazel_lib",
    version = "2.22.5",
    dev_dependency = True,
)

gcc_toolchains = use_extension(
    "@gcc_toolchain//toolchain:module_extensions.bzl",
    "gcc_toolchains",
)
gcc_toolchains.toolchain(
    name = "gcc_toolchain_x86_64",
    extra_cxxflags = [
        "-fdiagnostics-color=never",
        "-nostdinc",
        "-nostdinc++",
        "-B%workspace%/bin",
        # Force C++14 as default
        "-std=c++14",
    ],
    extra_ldflags = [
        "-lstdc++",
    ],
    target_arch = "x86_64",
)
use_repo(gcc_toolchains, "gcc_toolchain_x86_64")

register_toolchains(
    "@gcc_toolchain_x86_64//:cc_toolchain",
)

register_execution_platforms("@rules_cc_hdrs_map_examples//:x86_64_linux_remote")

# gcc_toolchain is patched for compatibility with Bazel 9
archive_override(
    module_name = "gcc_toolchain",
    integrity = "sha256-5qAKn5mbKbpO7gv3P3Sr7uwcuFdAyMGXqL+omnPnIrA=",
    patch_strip = 1,
    patches = ["0001-feat-explicit-load-of-rules_cc-s-symbols.patch"],
    strip_prefix = "gcc-toolchain-0.9.0",
    url = "https://github.com/f0rmiga/gcc-toolchain/releases/download/0.9.0/gcc-toolchain-0.9.0.tar.gz",
)

local_path_override(
    module_name = "rules_cc_hdrs_map",
    path = "../",
)
