module(
    name = "rules_cc_hdrs_map_examples",
    version = "0.31.1",
)

bazel_dep(name = "rules_cc_hdrs_map", version = "0.31.1")
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "platforms", version = "1.0.0")

# Some examples depend on boost, to prove interopability
bazel_dep(name = "boost.math", version = "1.87.0")
bazel_dep(
    name = "gcc_toolchain",
    version = "0.9.0",
)

gcc_toolchains = use_extension(
    "@gcc_toolchain//toolchain:module_extensions.bzl",
    "gcc_toolchains",
)
gcc_toolchains.toolchain(
    name = "gcc_toolchain_x86_64",
    extra_cxxflags = [
        "-fdiagnostics-color=never",
        "-nostdinc",
        "-nostdinc++",
        "-B%workspace%/bin",
        # Force C++14 as default
        "-std=c++14",
    ],
    extra_ldflags = [
        "-lstdc++",
    ],
    target_arch = "x86_64",
)
use_repo(gcc_toolchains, "gcc_toolchain_x86_64")

register_toolchains(
    "@gcc_toolchain_x86_64//:cc_toolchain",
)

register_execution_platforms("@rules_cc_hdrs_map_examples//:x86_64_linux_remote")

local_path_override(
    module_name = "rules_cc_hdrs_map",
    path = "../",
)
