workspace(
    name = "rules_cc_hdrs_map_examples",
)

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

RULES_CC_COMMIT = "2f8c04c04462ab83c545ab14c0da68c3b4c96191"

http_archive(
    name = "rules_cc",
    sha256 = "4aeb102efbcfad509857d7cb9c5456731e8ce566bfbf2960286a2ec236796cc3",
    strip_prefix = "rules_cc-%s" % RULES_CC_COMMIT,
    urls = ["https://github.com/bazelbuild/rules_cc/archive/%s.tar.gz" % RULES_CC_COMMIT],
)

RULES_BOOST_COMMIT = "ea2991b24d68439121130845f7dbef8d1dd383d2"

http_archive(
    name = "com_github_nelhage_rules_boost",
    sha256 = "0db14c7eb7acc78cbe601a450d7161e492d7ffc98150775cfef6e2cdf5ec7e6a",
    strip_prefix = "rules_boost-%s" % RULES_BOOST_COMMIT,
    urls = [
        "https://github.com/nelhage/rules_boost/archive/%s.tar.gz" % RULES_BOOST_COMMIT,
    ],
)

load("@com_github_nelhage_rules_boost//:boost/boost.bzl", "boost_deps")

boost_deps()

local_repository(
    name = "rules_cc_hdrs_map",
    path = "../",
)
