""" This package contains the subrules with CC compilation phases. """

load("@bazel_lib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//:__subpackages__"])

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    deps = [
        ":compile",
        ":link_to_archive",
        ":link_to_binary",
        ":link_to_so",
        "//cc_hdrs_map/providers:cascading_cc_shared_library_info",
        "//cc_hdrs_map/providers:cc_shared_library_info",
    ],
)

bzl_library(
    name = "cc_helper",
    srcs = ["cc_helper.bzl"],
    deps = [
        "//cc_hdrs_map/providers:hdrs_map",
        "//cc_hdrs_map/providers:hdrs_map_info",
        "@rules_cc//cc/common",
        "@rules_cc//cc/common:cc_helper_bzl",
    ],
)

bzl_library(
    name = "compile",
    srcs = ["compile.bzl"],
    deps = [
        ":cc_helper",
        "//cc_hdrs_map/providers:hdrs_map",
        "@rules_cc//cc:find_cc_toolchain_bzl",
        "@rules_cc//cc/common",
    ],
)

bzl_library(
    name = "copy_file",
    srcs = ["copy_file.bzl"],
    deps = [],
)

bzl_library(
    name = "link_to_archive",
    srcs = ["link_to_archive.bzl"],
    deps = [
        ":cc_helper",
        "@rules_cc//cc:action_names_bzl",
        "@rules_cc//cc:find_cc_toolchain_bzl",
        "@rules_cc//cc/common",
    ],
)

bzl_library(
    name = "link_to_binary",
    srcs = ["link_to_binary.bzl"],
    deps = [
        ":cc_helper",
        "//cc_hdrs_map/providers:cascading_cc_shared_library_info",
        "//cc_hdrs_map/providers:cc_shared_library_info",
        "@rules_cc//cc:find_cc_toolchain_bzl",
        "@rules_cc//cc/common",
    ],
)

bzl_library(
    name = "link_to_so",
    srcs = ["link_to_so.bzl"],
    deps = [
        ":cc_helper",
        "//cc_hdrs_map/providers:cascading_cc_shared_library_info",
        "//cc_hdrs_map/providers:cc_shared_library_info",
        "@rules_cc//cc:find_cc_toolchain_bzl",
        "@rules_cc//cc/common",
        "@rules_cc//cc/common:cc_shared_library_info_bzl",
    ],
)
