""" This package contains modules with rule-specific providers. """

load("@bazel_lib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//:__subpackages__"])

bzl_library(
    name = "hdrs_map",
    srcs = ["hdrs_map.bzl"],
    deps = ["//cc_hdrs_map/actions:copy_file"],
)

bzl_library(
    name = "hdrs_map_info",
    srcs = ["hdrs_map_info.bzl"],
    deps = [
        ":hdrs_map",
    ],
)

bzl_library(
    name = "cascading_cc_shared_library_info",
    srcs = ["cascading_cc_shared_library_info.bzl"],
    deps = [
        "@rules_cc//cc/common",
        "@rules_cc//cc/common:cc_shared_library_info_bzl",
    ],
)

bzl_library(
    name = "cc_shared_library_info",
    srcs = ["cc_shared_library_info.bzl"],
    deps = [
        "@rules_cc//cc/common",
        "@rules_cc//cc/common:cc_shared_library_info_bzl",
    ],
)

bzl_library(
    name = "helper",
    srcs = ["helper.bzl"],
    deps = [
        ":cc_shared_library_info",
        ":hdrs_map",
        ":hdrs_map_info",
    ],
)
