load("@rules_cc//cc:defs.bzl", "cc_import")
load("@rules_cc_hdrs_map//cc_hdrs_map:defs.bzl", "cc_so_import")

cc_so_import(
    name = "libuuid",
    hdrs = ["include/uuid/uuid.h"],
    include_prefix = "uuid",
    # shared_library = "lib/libuuid.so.1.3.0",
    shared_library = "lib/libuuid.so.1",
    strip_include_prefix = "libuuid/include/uuid",
    visibility = ["//visibility:public"],
)

# Com,ment
cc_import(
    name = "libuuid.cc_import",
    hdrs = ["include/uuid/uuid.h"],
    shared_library = "lib/libuuid.so.1",
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
)
