load("@rules_cc_hdrs_map//cc_hdrs_map:defs.bzl", "cc_so_import")

cc_so_import(
    name = "libuuid",
    hdrs = ["include/uuid/uuid.h"],
    include_prefix = "uuid",
    shared_library = "lib/libuuid.so.1",
    strip_include_prefix = "libuuid/include/uuid",
    # cascade = True,
    visibility = ["//visibility:public"],
)
