""" Simple examples. """

load("@rules_cc_header_maps//cc:bin.bzl", "cc_bin_with_header_maps")

cc_bin_with_header_maps(
    name = "hello-world",
    srcs = ["hello-world.cpp"],
)

cc_bin_with_header_maps(
    name = "main",
    srcs = [
        "main.cpp"
    ],
    public_hdrs = [
        "//tolkien:reuel/ronald/john/include/riddle-one.hpp"
    ]
)
