""" This package contains the simplest example of usage of cc_hdrs_map rules. """

load("@rules_cc_hdrs_map//cc_hdrs_map:defs.bzl", "cc_so")

cc_so(
    name = "libDeck",
    srcs = ["deck.cpp"],
    hdrs = ["deck.hpp"],
    copts = [
        "-Wall",
        "-Wextra",
        "-Werror",
    ],
    hdrs_map = {
        "**/deck.hpp": ["kced/{filename}"],
    },
    linkopts = [
        "-Wall",
        "-Wextra",
        "-Werror",
        "-Wl,--unresolved-symbols=report-all",
    ],
    visibility = ["//visibility:public"],
    deps = ["//simple/random:libRandom"],
)
