""" This package contains the simplest example of usage of cc_hdrs_map rules. """

load("@rules_cc_hdrs_map//cc_hdrs_map:defs.bzl", "cc_bin")

cc_bin(
    name = "main",
    srcs = [
        "main.cpp",
        "main.hpp",
    ],
    copts = [
        "-Wall",
        "-Wextra",
        "-Werror",
    ],
    # This executes the path responsbile for
    # feeding files into runfiles.
    data = [":nothing.txt"],
    hdrs_map = {
        "**/messenger.hpp": ["jolly/{filename}"],
        "{filename}": ["lucky/{filename}"],
    },
    linkopts = [
        "-Wall",
        "-Wextra",
        "-Werror",
        "-Wl,--unresolved-symbols=report-all",
    ],
    # This executes the path responsible for
    # make variables substitution
    local_defines = ["$(COMPILATION_MODE)"],
    deps = [
        "//simple/messenger:libMessenger",
    ],
)
