""" Simple examples. """

load("@rules_cc_hdrs_map//rules:cc_bin.bzl", "cc_bin")

# This target checks for proper mapping of very weird patterns,
# to even wierder ones.
cc_bin(
    name = "list-cheeses",
    srcs = [
        "list-cheeses.cpp",
    ],
    hdrs_map = {
        "a/private/includes/pointless-subdir/a-consts-two.hpp": ["other-pointless-subdir/{filename}"],
        "a/private/includes/pointless-subdir/a-consts-three.hpp": ["a/b/c/d/e/f/g/{filename}"],
        "a/private/other/a-consts-four.hpp": ["implements/{filename}"],
    },
    deps = [
        "//a/private/includes:a-consts-headers",
    ],
)

# This target checks for propagation of transitive CCInfo dependencies
# i.e. boost
cc_bin(
    name = "print-half-a-bee",
    srcs = [
        "print-half-a-bee.cpp",
    ],
    hdrs_map = {
        "a/private/includes/half-a-bee.hpp": ["half-a-bee.hpp"],
    },
    deps = [
        "//a/private/includes:a-half-a-bee-headers",
    ],
)
