""" Simple examples. """

load("@rules_cc_hdrs_map//rules:cc_bin.bzl", "cc_bin")
load("@rules_cc_hdrs_map//rules:cc_so.bzl", "cc_so")
load("@rules_cc_hdrs_map//rules:cc_static.bzl", "cc_static")

cc_so(
    name = "list-cheeses",
    srcs = [
        "cheeses.cpp",
    ],
    hdrs_map = {
        "a/public/includes/cheeses.hpp": ["a/{filename}"],
    },
    deps = [
        "//a/public/includes:headers",
    ],
)

cc_static(
    name = "list-cheeses-static",
    srcs = [
        "cheeses.cpp",
    ],
    hdrs_map = {
        "a/public/includes/cheeses.hpp": ["a/{filename}"],
    },
    deps = [
        "//a/public/includes:headers",
    ],
)

cc_bin(
    name = "list-cheeses-bin",
    srcs = [
        "list.cpp",
    ],
    deps = [
        ":list-cheeses",
    ],
)

cc_so(
    name = "libpong",
    srcs = [
        "pong.cpp",
    ],
    deps = [
        "//a/private/includes:pong_headers",
        "//b/private/includes:ping_headers",
    ],
    visibility = ["//visibility:public"],
)
