""" Simple examples. """

load("@rules_cc_hdrs_map//cc_hdrs_map:defs.bzl", "cc_archive", "cc_bin", "cc_so")

cc_so(
    name = "list-cheeses",
    srcs = [
        "cheeses.cpp",
    ],
    hdrs_map = {
        "a/public/includes/cheeses.hpp": ["a/{filename}"],
    },
    deps = [
        "//a/public/includes:headers",
    ],
)

cc_archive(
    name = "list-cheeses-static",
    srcs = [
        "cheeses.cpp",
    ],
    hdrs_map = {
        "a/public/includes/cheeses.hpp": ["a/{filename}"],
    },
    deps = [
        "//a/public/includes:headers",
    ],
)

cc_bin(
    name = "list-cheeses-bin",
    srcs = [
        "list.cpp",
    ],
    deps = [
        ":list-cheeses",
    ],
)

cc_so(
    name = "libpong",
    srcs = [
        "pong.cpp",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//a/private/includes:pong_headers",
        "//b/private/includes:ping_headers",
    ],
)
