""" Ensure this is a separate package """

load("@rules_cc_hdrs_map//cc:cc_hdrs.bzl", "cc_hdrs")

cc_hdrs(
    name = "headers",
    public_hdrs = [
        "cheeses.hpp",
    ],
    deps = [
        "//a/private/includes:a-consts-headers"
    ],
    hdrs_map = {
        "a/private/includes/a-consts-one.hpp": ["alpha/{filename}"],
        "a/private/includes/pointless-subdir/a-consts-two.hpp": ["beta/{filename}"],
        "a/private/includes/pointless-subdir/a-consts-three.hpp": ["gamma/{filename}"],
        "a/private/other/a-consts-four.hpp": ["delta/epsilon/{filename}"]  
    },
    visibility = ["//visibility:public"]
)
