""" Simple examples. """

load("@rules_cc_hdrs_map//rules:cc_so.bzl", "cc_so")

cc_so(
    name = "libping",
    srcs = [
        "ping.cpp",
    ],
    deps = [
        "//b/private/includes:ping_headers",
        "//a/private/includes:pong_headers",
    ],
    visibility = ["//b:__subpackages__"],
)
