""" Simple examples. """

load("@rules_cc_hdrs_map//rules:cc_so.bzl", "cc_so")

cc_so(
    name = "libping",
    srcs = [
        "ping.cpp",
    ],
    visibility = ["//b:__subpackages__"],
    deps = [
        "//a/private/includes:pong_headers",
        "//b/private/includes:ping_headers",
    ],
)
