""" Ensure this is a separate package """

load("@rules_cc_hdrs_map//rules:cc_hdrs.bzl", "cc_hdrs")

cc_hdrs(
    name = "ping_headers",
    hdrs_map = {
        "b/private/includes/**": ["{filename}"],
    },
    public_hdrs = [
        "ping.hpp",
    ],
    visibility = ["//b:__subpackages__"]
)

cc_hdrs(
    name = "pong_headers",
    hdrs_map = {
        "b/private/includes/**": ["{filename}"],
    },
    public_hdrs = [
        "pong.hpp",
    ],
    visibility = ["//b:__subpackages__"]
)
